--- a/HelloWorldCK/Base.lproj/Main.storyboard
+++ b/HelloWorldCK/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="HelloWorldCK" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Bracelet_One" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -115,7 +115,7 @@
         <!--Care Kit View Controller-->
         <scene sceneID="kN2-6V-whP">
             <objects>
-                <viewController id="ddI-vJ-Tgi" customClass="CareKitViewController" customModule="HelloWorldCK" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ddI-vJ-Tgi" customClass="CareKitViewController" customModule="Bracelet_One" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jW6-ov-H8U">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -150,7 +150,7 @@
         <!--Emory Health View Controller-->
         <scene sceneID="60P-YD-Sfw">
             <objects>
-                <viewController id="aNa-aM-V0n" customClass="EmoryHealthViewController" customModule="HelloWorldCK" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="aNa-aM-V0n" customClass="EmoryHealthViewController" customModule="Bracelet_One" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pqG-WX-gJL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -183,7 +183,7 @@
         <!--Login View Controller-->
         <scene sceneID="5Tc-lb-JJa">
             <objects>
-                <viewController id="35t-5L-XCX" customClass="LoginViewController" customModule="HelloWorldCK" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="35t-5L-XCX" customClass="LoginViewController" customModule="Bracelet_One" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5Sw-r2-cuM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -198,16 +198,16 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="braceletOneLogo-2" translatesAutoresizingMaskIntoConstraints="NO" id="Sml-zZ-LHP">
-                                        <rect key="frame" x="67.5" y="0.0" width="240" height="205"/>
+                                        <rect key="frame" x="67.5" y="0.0" width="240" height="329"/>
                                     </imageView>
                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4X3-BL-EYa">
-                                        <rect key="frame" x="131.5" y="209.5" width="112" height="0.0"/>
+                                        <rect key="frame" x="131.5" y="333.5" width="112" height="0.0"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="58"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="z4T-KQ-2Ay">
-                                        <rect key="frame" x="10.5" y="214" width="354" height="30"/>
+                                        <rect key="frame" x="10.5" y="338" width="354" height="30"/>
                                         <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="7z2-yS-5gj"/>
@@ -216,13 +216,13 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XTE-C5-ukW">
-                                        <rect key="frame" x="10.5" y="253" width="354" height="32"/>
+                                        <rect key="frame" x="10.5" y="377" width="354" height="32"/>
                                         <color key="backgroundColor" red="1" green="0.99997437" blue="0.99999129769999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" name="Avenir-Oblique" family="Avenir" pointSize="20"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W5f-oU-wmd">
-                                        <rect key="frame" x="68.5" y="294" width="238" height="53"/>
+                                        <rect key="frame" x="68.5" y="418" width="238" height="53"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="25"/>
                                         <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Login" backgroundImage="Button-1">
@@ -232,8 +232,8 @@
                                             <action selector="loginActionWithSender:" destination="35t-5L-XCX" eventType="touchUpInside" id="7s4-DX-vfg"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uqu-pn-aNM">
-                                        <rect key="frame" x="75" y="356" width="225" height="53"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uqu-pn-aNM">
+                                        <rect key="frame" x="75" y="475.5" width="225" height="0.0"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="25"/>
                                         <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Login with Facebook" backgroundImage="Button"/>
@@ -241,8 +241,8 @@
                                             <action selector="loginActionWithSender:" destination="35t-5L-XCX" eventType="touchUpInside" id="D3a-pH-QmO"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QFU-f7-cHD">
-                                        <rect key="frame" x="90" y="418" width="195" height="53"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QFU-f7-cHD">
+                                        <rect key="frame" x="90" y="475.5" width="195" height="0.0"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="25"/>
                                         <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Login with Google" backgroundImage="Button"/>
@@ -306,7 +306,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KUd-Hc-iLe" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="wsd-P3-BZa" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1509.5999999999999" y="-630.13493253373315"/>
+            <point key="canvasLocation" x="2063" y="-654"/>
         </scene>
     </scenes>
     <resources>
