--- a/HelloWorldCK/Base.lproj/Main.storyboard
+++ b/HelloWorldCK/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QLY-FT-nQS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="O5F-ZN-vg5">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -32,7 +32,7 @@
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your amount due:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j6W-Hj-8e5">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your scholarship amount due:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j6W-Hj-8e5">
                                         <rect key="frame" x="0.0" y="152" width="343" height="56"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="25"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -380,7 +380,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BJ4-je-ek1" userLabel="Header">
                                 <rect key="frame" x="0.0" y="64" width="375" height="44"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bracelet One Recurring Payment" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YVG-Yl-dn1">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recurring Treatment Payment" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YVG-Yl-dn1">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                         <color key="backgroundColor" red="0.78676237309999997" green="0.057445696179999998" blue="0.0058445363580000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="23"/>
@@ -788,28 +788,28 @@
         <!--Pairing View Controller-->
         <scene sceneID="6Ew-tF-tZg">
             <objects>
-                <viewController id="QLY-FT-nQS" customClass="BLEPairingViewController" customModule="Bracelet_One" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="blePairingController" id="QLY-FT-nQS" customClass="BLEPairingViewController" customModule="Bracelet_One" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8BB-jv-y9f">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="1Mx-yo-qQ9">
-                                <rect key="frame" x="20" y="40" width="335" height="527"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="1Mx-yo-qQ9">
+                                <rect key="frame" x="20" y="40" width="335" height="577"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bluetooth On" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pjI-pl-gi2">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="175.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="37"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="31"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="UZM-LI-igd">
-                                        <rect key="frame" x="0.0" y="175.5" width="335" height="176"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="UZM-LI-igd">
+                                        <rect key="frame" x="0.0" y="37" width="335" height="204"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="glucoseair" translatesAutoresizingMaskIntoConstraints="NO" id="TCR-Lg-JDe">
-                                                <rect key="frame" x="0.0" y="0.0" width="162.5" height="176"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="162.5" height="204"/>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hqv-Qc-MJz">
-                                                <rect key="frame" x="172.5" y="0.0" width="162.5" height="56"/>
+                                                <rect key="frame" x="172.5" y="74" width="162.5" height="56"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="56" id="ohy-n7-SwD"/>
                                                 </constraints>
@@ -819,15 +819,18 @@
                                                 </state>
                                             </button>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="hqv-Qc-MJz" firstAttribute="top" secondItem="UZM-LI-igd" secondAttribute="top" constant="74" id="uvr-js-lRr"/>
+                                        </constraints>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="bottom" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="OGZ-Xs-JSu">
-                                        <rect key="frame" x="0.0" y="351.5" width="335" height="175.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="OGZ-Xs-JSu">
+                                        <rect key="frame" x="0.0" y="241" width="335" height="283"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pairwatch" translatesAutoresizingMaskIntoConstraints="NO" id="3g4-DE-tDT">
-                                                <rect key="frame" x="0.0" y="0.0" width="162.5" height="175.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="162.5" height="283"/>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BZy-Vw-SRZ">
-                                                <rect key="frame" x="172.5" y="119.5" width="162.5" height="56"/>
+                                                <rect key="frame" x="172.5" y="113.5" width="162.5" height="56"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="56" id="yET-aQ-pWf"/>
                                                 </constraints>
@@ -838,13 +841,20 @@
                                             </button>
                                         </subviews>
                                     </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BYv-Tu-IRu">
+                                        <rect key="frame" x="0.0" y="524" width="335" height="53"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
+                                        <state key="normal" title="Access Clinic" backgroundImage="Button-1">
+                                            <color key="titleColor" red="0.78676237309999997" green="0.057445696179999998" blue="0.0058445363580000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.78676237309999997" green="0.057445696179999998" blue="0.0058445363580000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="ZwG-Zm-8oz" firstAttribute="trailing" secondItem="1Mx-yo-qQ9" secondAttribute="trailing" constant="20" id="3sH-WG-6gJ"/>
-                            <constraint firstItem="ZwG-Zm-8oz" firstAttribute="bottom" secondItem="1Mx-yo-qQ9" secondAttribute="bottom" constant="100" id="Lex-k8-OVT"/>
+                            <constraint firstItem="ZwG-Zm-8oz" firstAttribute="bottom" secondItem="1Mx-yo-qQ9" secondAttribute="bottom" constant="50" id="Lex-k8-OVT"/>
                             <constraint firstItem="1Mx-yo-qQ9" firstAttribute="leading" secondItem="ZwG-Zm-8oz" secondAttribute="leading" constant="20" id="Zze-2h-nTB"/>
                             <constraint firstItem="1Mx-yo-qQ9" firstAttribute="top" secondItem="ZwG-Zm-8oz" secondAttribute="top" constant="20" id="iay-9X-GY6"/>
                         </constraints>
@@ -889,7 +899,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tt2-8P-GYs">
-                                <rect key="frame" x="16" y="123.5" width="343" height="26"/>
+                                <rect key="frame" x="16" y="129" width="343" height="26"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="22"/>
                                 <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -901,7 +911,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cq1-6u-cFE">
-                                <rect key="frame" x="113" y="318" width="148" height="30"/>
+                                <rect key="frame" x="83" y="318" width="208" height="30"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                                 <state key="normal" title="Begin your Treatment">
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -914,7 +924,7 @@
                         <color key="backgroundColor" red="0.78676237309999997" green="0.057445696179999998" blue="0.0058445363580000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="cq1-6u-cFE" firstAttribute="centerY" secondItem="y2y-np-hgf" secondAttribute="centerY" id="5At-z7-VfY"/>
-                            <constraint firstItem="tt2-8P-GYs" firstAttribute="top" secondItem="D0A-Nz-D81" secondAttribute="bottom" constant="66" id="BKT-Zh-k13"/>
+                            <constraint firstItem="tt2-8P-GYs" firstAttribute="top" secondItem="D0A-Nz-D81" secondAttribute="bottom" constant="71.5" id="BKT-Zh-k13"/>
                             <constraint firstItem="D0A-Nz-D81" firstAttribute="centerX" secondItem="y2y-np-hgf" secondAttribute="centerX" id="GyZ-Y5-Te1"/>
                             <constraint firstItem="tt2-8P-GYs" firstAttribute="leading" secondItem="y2y-np-hgf" secondAttribute="leadingMargin" id="HQi-sb-OB9"/>
                             <constraint firstItem="D0A-Nz-D81" firstAttribute="top" secondItem="qfY-am-tih" secondAttribute="bottom" constant="8" id="OfY-N4-EcV"/>
@@ -931,7 +941,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ecb-RJ-Qyf" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1714" y="1018"/>
+            <point key="canvasLocation" x="1712.8" y="1017.84107946027"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="0jL-Ez-Hpe">
